# ipr_barman

./: .gitignore  CMakeLists.txt  REFACTORING_PLAN.md  barrepository.h  bartender.cpp  bartender.h  businessday.cpp  businessday.h  cardscanner.h  categorylist.cpp  categorylist.h  customer.h  customerscanner.cpp  customerscanner.h  databaseconnector.cpp  databaseconnector.h  detailswindow.cpp  detailswindow.h  detailswindow.ui  draftorder.cpp  draftorder.h  editwindow.cpp  editwindow.h  editwindow.ui  employee.h  ipr_barman.pro  local.cpp  local.h  loginscanner.cpp  loginscanner.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manageproductwindow.cpp  manageproductwindow.h  manageproductwindow.ui  (+19 more)
.github/workflows/: check.yml
tests/: CMakeLists.txt  fakebarrepository.h  scriptedcardscanner.h  tst_businessday.cpp  tst_draftorder.cpp  tst_finalize.cpp  tst_money.cpp  tst_mysql_repository.cpp  tst_order.cpp  tst_orderdetails.cpp  tst_ordermanager.cpp  tst_product.cpp  tst_productmanager.cpp  tst_scanners.cpp  tst_stock.cpp
